# distropack-cli

./: Cargo.toml  README.md
.github/actions/distropack-action/: README.md  action.yml  entrypoint.sh
.github/workflows/: release.yml
docs/: api-reference.md  authentication.md  ci-integration.md  installation.md
docs/ci/: circleci.md  generic.md  github-actions.md  gitlab-ci.md
examples/ci/: .gitlab-ci.yml  generic-ci.sh
examples/ci/.circleci/: config.yml
examples/ci/.github/workflows/: distropack-action.yml  distropack-matrix.yml  distropack.yml
examples/ci/jenkins/: Jenkinsfile
src/: api.rs  auth.rs  config.rs  main.rs
src/commands/: build.rs  config.rs  mod.rs  upload.rs
