[package]
name = "distropack-cli"
version = "0.1.0"
edition = "2021"
authors = ["DistroPack Team"]
description = "Official CLI tool for DistroPack - automate Linux package builds from CI/CD pipelines"
license = "MIT"
repository = "https://github.com/distropack/distropack-cli"

[[bin]]
name = "distropack-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"

